[tool.poetry]
name = "serverless_template"
version = "0.1.0"
description = "AWS Serverless Template Project"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
marshmallow = "^3.7.0"
sqlalchemy = "^1.3.18"
boto3 = "^1.14.23"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pre-commit = "^2.6.0"
pylint = "^2.5.3"
black = "^19.10b0"
flake8 = "^3.8.3"
pytest-cov = "^2.10.0"
awscli = "^1.18.100"
pytest-xdist = "^1.33.0"
python-dotenv = "^0.14.0"
"aws_cdk.core" = "^1.52.0"
"aws_cdk.aws-s3" = "^1.52.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
